fix: The Boolean constructor is deprecated.